fix: adjust container size and navigation alignment

--- a/packages/components/src/components/bal-logo/bal-logo.sass
+++ b/packages/components/src/components/bal-logo/bal-logo.sass
@@ -1,13 +1,14 @@
 +block(logo)
-  svg
-    transform: unset !important
   position: static
   display: block
   height: 1.25rem
+  svg
+    transform: unset !important
   +fillSvg($blue)
   & > div
     height: 1.25rem
-  // colors
+  +modifier('animated')
+    margin-left: -7px
   +modifier('white')
     +fillSvg($white)
   +desktop
