--- a/packages/components/src/components/bal-navigation/bal-navigation.sass
+++ b/packages/components/src/components/bal-navigation/bal-navigation.sass
@@ -31,20 +31,13 @@
       gap: .5rem
       align-items: center
       margin: 0 auto
-      width: calc(100vw - 6rem)
-      padding: 0
-      +widescreen
-        width: calc(100vw - 15rem)
-      +fullhd
-        width: calc(100vw - 32.5rem)
-        max-width: 1400px
 
     +element(start)
       display: flex
       flex-grow: 1
       align-items: center
       gap: .5rem
-      margin-left: -.75rem
+      // margin-left: -.75rem
     +element(end)
       position: relative
       z-index: 20
@@ -61,6 +54,8 @@
     transform: translateX(-50%)
     height: auto
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1)
+    background: var(--bal-color-white)
+    transition: border-radius .3s ease-in-out
     +until-widescreen
       width: 100%
       +modifier(expanded)
@@ -68,19 +63,11 @@
         border-bottom-right-radius: var(--bal-radius-large)
     +widescreen
       margin: 1rem auto 0
-      width: calc(100vw - 10rem)
       border-radius: var(--bal-radius-large)
-    +fullhd
-      margin: 1.5rem auto 0
-      width: 1480px
-      max-width: 1480px
 
     +element(head)
       display: block
-      padding: 0 3rem
       position: relative
-      transition: border-radius .3s ease-in-out
-      background-color: var(--bal-color-background)
       > div
         display: flex
         gap: 1rem
@@ -96,9 +83,9 @@
         &::after
           position: absolute
           content: ''
+          width: calc(100% + 3rem + 3rem)
+          left: -3rem
           top: 100%
-          left: 0
-          width: 100%
           height: 1px
           background-color: var(--bal-color-grey)
           opacity: 0
@@ -110,7 +97,6 @@
             transition: opacity .3s ease-in-out
       +widescreen
         border-radius: var(--bal-radius-large)
-        padding: 0 2.5rem
         > div
           align-items: center
         +modifier(active)
@@ -137,12 +123,12 @@
   +element(menu)
     display: block
     +desktop
-      padding: 2.5rem 3rem .5rem
-    +widescreen
-      padding: 2.5rem 2.5rem .5rem
+      padding-top: 2.5rem
+      padding-bottom: .5rem
     .bal-nav__menu__wrapper.columns
       margin-bottom: 0
       margin-top: 0
+      margin-right: 0
       .column
         padding-top: 0
         padding-bottom: 0
@@ -300,6 +286,8 @@
     .bal-navigation-popover__button
       position: relative
       z-index: 20
+    .control
+      margin: 0 !important
     +element(head)
       display: flex
       align-items: center
