--- a/packages/components/src/components/bal-stage/bal-stage.sass
+++ b/packages/components/src/components/bal-stage/bal-stage.sass
@@ -14,7 +14,7 @@
 
   +block(stage-content)
     display: block
-    position: static
+    position: relative
 
     +block(stage-image)
       overflow: hidden
@@ -109,8 +109,7 @@
         right: 1rem
         +tablet
           bottom: -40px
+          right: 2.5rem
         +desktop
-          right: 2rem
+          right: 3rem
           bottom: -66px
-        +from(1467px)
-          right: calc((100vw - var(--bal-stage-container-width)) / 2)
