--- a/packages/components/src/components/bal-tabs/bal-tabs.sass
+++ b/packages/components/src/components/bal-tabs/bal-tabs.sass
@@ -211,11 +211,13 @@
 
     .bal-tabs__tabs__item--spaceless:first-child:not(.bal-tabs__tabs__item__button--vertical-on-tablet):not(.bal-tabs__tabs__item__button--vertical-on-mobile)
       & > .bal-tabs__tabs__item__button--context-tabs,
+      & > .bal-tabs__tabs__item__button--context-meta,
       & > .bal-tabs__tabs__item__button--context-navigation
         padding-left: 0
 
     .bal-tabs__tabs__item--spaceless:last-child:not(.bal-tabs__tabs__item__button--vertical-on-tablet):not(.bal-tabs__tabs__item__button--vertical-on-mobile)
       & > .bal-tabs__tabs__item__button--context-tabs,
+      & > .bal-tabs__tabs__item__button--context-meta,
       & > .bal-tabs__tabs__item__button--context-navigation
         padding-right: 0
 
